Made default actions configurable.

--- a/journal.cfg
+++ b/journal.cfg
@@ -6,3 +6,9 @@ readonly JOURNAL_EDITOR='vim'
 
 # Optional journal file extension
 readonly JOURNAL_FILE_EXTENSION='md'
+
+# Default action
+# readonly JOURNAL_DEFAULT_ACTION="open"
+
+# Default show period
+# readonly JOURNAL_DEFAULT_SHOW_PERIOD="week"
