Ability to define viewer.

--- a/journal.cfg
+++ b/journal.cfg
@@ -7,6 +7,9 @@ readonly JOURNAL_EDITOR='vim'
 # Optional journal file extension
 readonly JOURNAL_FILE_EXTENSION='md'
 
+# Command that will run a program to display concatenated journal files. If not set, editor will be used.
+readonly JOURNAL_VIEWER="echo"
+
 # Default action
 # readonly JOURNAL_DEFAULT_ACTION="open"
 
