Add adding time tag

--- a/journal.cfg
+++ b/journal.cfg
@@ -15,3 +15,6 @@ readonly JOURNAL_VIEWER="echo"
 
 # Default show period
 # readonly JOURNAL_DEFAULT_SHOW_PERIOD="week"
+
+# Add time tag when opening journal file to edit
+readonly ADD_TIME_TAG=true
