Change open action to log
Log is more unambiguous than opening as there is show action as well.

--- a/journal.cfg
+++ b/journal.cfg
@@ -11,7 +11,7 @@ readonly JOURNAL_FILE_EXTENSION='md'
 readonly JOURNAL_VIEWER="echo"
 
 # Default action
-# readonly JOURNAL_DEFAULT_ACTION="open"
+# readonly JOURNAL_DEFAULT_ACTION="log"
 
 # Default show period
 # readonly JOURNAL_DEFAULT_SHOW_PERIOD="week"
