Fix show week command

--- a/journal.cfg
+++ b/journal.cfg
@@ -8,7 +8,7 @@ readonly JOURNAL_EDITOR='vim'
 readonly JOURNAL_FILE_EXTENSION='md'
 
 # Command that will run a program to display concatenated journal files. If not set, editor will be used.
-readonly JOURNAL_VIEWER="echo"
+readonly JOURNAL_VIEWER="cat"
 
 # Default action
 # readonly JOURNAL_DEFAULT_ACTION="log"
